--- a/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/Login/Login.cshtml
+++ b/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/Login/Login.cshtml
@@ -30,6 +30,11 @@
                     <span class="border-b w-1/5 md:w-1/4"></span>
                     <a href="/Register" class="text-xs text-gray-500 uppercase">or sign up</a>
                     <span class="border-b w-1/5 md:w-1/4"></span>
+                
+                </div><div class="mt-4 flex items-center justify-between">
+                    <span class="border-b w-1/5 md:w-1/4"></span>
+                    <a href="/RegisterSeller" class="text-xs text-gray-500 uppercase">or Sign up as Seller</a>
+                    <span class="border-b w-1/5 md:w-1/4"></span>
                 </div>
             </form>
         </div>
