--- a/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/Login/Register.cshtml
+++ b/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/Login/Register.cshtml
@@ -43,7 +43,11 @@
                 </div>
                 <div class="mt-4 flex items-center justify-between">
                     <span class="border-b w-1/5 md:w-1/4"></span>
-                    <a href="/Login" class="text-xs text-gray-500 uppercase">or sign in</a>
+                    <a href="/Login" class="text-xs text-gray-500 uppercase">sign in</a>
+                    <span class="border-b w-1/5 md:w-1/4"></span>
+                </div>     <div class="mt-4 flex items-center justify-between">
+                    <span class="border-b w-1/5 md:w-1/4"></span>
+                    <a href="/RegisterSeller" class="text-xs text-gray-500 uppercase">or sign up as seller</a>
                     <span class="border-b w-1/5 md:w-1/4"></span>
                 </div>
             </form>
