--- a/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/OrderPage/Index.cshtml
+++ b/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/OrderPage/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@page
+﻿@page "/Order"
 @model PRN231_2_EventFlowerExchange_FE.Pages.OrderPage.IndexModel
 
 @{
@@ -27,7 +27,6 @@ else
             {
                 <tr>
                     <td>@order.OrderId</td>
-                    <td>@order.CustomerName</td>
                     <td>@order.TotalPrice</td>
                     <td>
                         <a asp-page="./Details" asp-route-id="@order.OrderId">View</a> |
