--- a/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/Shared/_Header.cshtml
+++ b/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/Shared/_Header.cshtml
@@ -1,5 +1,4 @@
-﻿
-<header x-data="{ isOpen: false }" class="bg-white shadow-md fixed w-full z-50">
+﻿<header class="sticky top-0 bg-white shadow-md w-full z-50">
     <nav class="container mx-auto px-6 py-3">
         <div class="flex justify-between items-center">
             <div class="flex items-center">
@@ -27,13 +26,11 @@
                 {
                     <a href="/Login" class="text-gray-800 hover:text-indigo-600">Login</a>
                     <a href="/Register" class="bg-indigo-600 text-white px-4 py-2 rounded-md hover:bg-indigo-700">Register</a>
-                    <a href="/RegisterSeller" class="bg-indigo-600 text-white px-4 py-2 rounded-md hover:bg-indigo-700">Seller</a>
                 }
             </div>
             <div class="md:hidden">
-              
             </div>
         </div>
-        
+
     </nav>
 </header>
