--- a/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/Login/Register.cshtml
+++ b/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/Login/Register.cshtml
@@ -11,6 +11,12 @@
         </div>
         <div class="w-full p-8 lg:w-1/2">
             <h1 class="text-2xl font-semibold text-gray-700 text-center mb-4">Register</h1>
+            @if (!string.IsNullOrEmpty(Model.SuccessMessage))
+            {
+                <div class="bg-green-100 border border-green-400 text-green-700 px-4 py-3 rounded relative mb-4" role="alert">
+                    <span class="block sm:inline">@Model.SuccessMessage</span>
+                </div>
+            }
             <form method="post">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="form-group mt-4">
@@ -45,7 +51,8 @@
                     <span class="border-b w-1/5 md:w-1/4"></span>
                     <a href="/Login" class="text-xs text-gray-500 uppercase">sign in</a>
                     <span class="border-b w-1/5 md:w-1/4"></span>
-                </div>     <div class="mt-4 flex items-center justify-between">
+                </div>
+                <div class="mt-4 flex items-center justify-between">
                     <span class="border-b w-1/5 md:w-1/4"></span>
                     <a href="/RegisterSeller" class="text-xs text-gray-500 uppercase">or sign up as seller</a>
                     <span class="border-b w-1/5 md:w-1/4"></span>
