--- a/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/Login/RegisterSeller.cshtml
+++ b/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/Login/RegisterSeller.cshtml
@@ -11,10 +11,16 @@
         </div>
         <div class="w-full p-8 lg:w-1/2">
             <h1 class="text-2xl font-semibold text-gray-700 text-center mb-4">Register as Seller</h1>
+            @if (!string.IsNullOrEmpty(Model.SuccessMessage))
+            {
+                <div class="bg-green-100 border border-green-400 text-green-700 px-4 py-3 rounded relative mb-4" role="alert">
+                    <span class="block sm:inline">@Model.SuccessMessage</span>
+                </div>
+            }
             <form method="post">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
-                <!-- Trường cho thông tin người dùng -->
+                <!-- User Information -->
                 <h2 class="text-lg font-semibold text-gray-700 mt-4">User Information</h2>
                 <div class="form-group mt-4">
                     <label class="text-gray-700" asp-for="RegisterRequest.CreateUser.FullName"></label>
@@ -42,7 +48,7 @@
                     <span asp-validation-for="RegisterRequest.CreateUser.Password" class="text-danger"></span>
                 </div>
 
-                <!-- Trường cho thông tin công ty -->
+                <!-- Company Information -->
                 <h2 class="text-lg font-semibold text-gray-700 mt-4">Company Information</h2>
                 <div class="form-group mt-4">
                     <label class="text-gray-700" asp-for="RegisterRequest.CreateCompany.CompanyName"></label>
@@ -67,7 +73,8 @@
                     <span class="border-b w-1/5 md:w-1/4"></span>
                     <a href="/Login" class="text-xs text-gray-500 uppercase">sign in</a>
                     <span class="border-b w-1/5 md:w-1/4"></span>
-                </div><div class="mt-4 flex items-center justify-between">
+                </div>
+                <div class="mt-4 flex items-center justify-between">
                     <span class="border-b w-1/5 md:w-1/4"></span>
                     <a href="/Register" class="text-xs text-gray-500 uppercase">or sign up as user</a>
                     <span class="border-b w-1/5 md:w-1/4"></span>
