--- a/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/Login/RegisterSeller.cshtml
+++ b/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/Login/RegisterSeller.cshtml
@@ -18,34 +18,34 @@
                 </div>
             }
             <form method="post">
-                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <div asp-validation-summary="ModelOnly" class="text-red-500"></div>
 
                 <!-- User Information -->
                 <h2 class="text-lg font-semibold text-gray-700 mt-4">User Information</h2>
                 <div class="form-group mt-4">
                     <label class="text-gray-700" asp-for="RegisterRequest.CreateUser.FullName"></label>
                     <input asp-for="RegisterRequest.CreateUser.FullName" class="bg-gray-200 text-gray-700 focus:outline-none focus:shadow-outline border border-gray-300 rounded py-2 px-4 block w-full appearance-none" />
-                    <span asp-validation-for="RegisterRequest.CreateUser.FullName" class="text-danger"></span>
+                    <span asp-validation-for="RegisterRequest.CreateUser.FullName" class="text-red-500"></span>
                 </div>
                 <div class="form-group mt-4">
                     <label class="text-gray-700" asp-for="RegisterRequest.CreateUser.Email"></label>
                     <input asp-for="RegisterRequest.CreateUser.Email" class="bg-gray-200 text-gray-700 focus:outline-none focus:shadow-outline border border-gray-300 rounded py-2 px-4 block w-full appearance-none" />
-                    <span asp-validation-for="RegisterRequest.CreateUser.Email" class="text-danger"></span>
+                    <span asp-validation-for="RegisterRequest.CreateUser.Email" class="text-red-500"></span>
                 </div>
                 <div class="form-group mt-4">
                     <label class="text-gray-700" asp-for="RegisterRequest.CreateUser.Phone"></label>
                     <input asp-for="RegisterRequest.CreateUser.Phone" class="bg-gray-200 text-gray-700 focus:outline-none focus:shadow-outline border border-gray-300 rounded py-2 px-4 block w-full appearance-none" />
-                    <span asp-validation-for="RegisterRequest.CreateUser.Phone" class="text-danger"></span>
+                    <span asp-validation-for="RegisterRequest.CreateUser.Phone" class="text-red-500"></span>
                 </div>
                 <div class="form-group mt-4">
                     <label class="text-gray-700" asp-for="RegisterRequest.CreateUser.Address"></label>
                     <input asp-for="RegisterRequest.CreateUser.Address" class="bg-gray-200 text-gray-700 focus:outline-none focus:shadow-outline border border-gray-300 rounded py-2 px-4 block w-full appearance-none" />
-                    <span asp-validation-for="RegisterRequest.CreateUser.Address" class="text-danger"></span>
+                    <span asp-validation-for="RegisterRequest.CreateUser.Address" class="text-red-500"></span>
                 </div>
                 <div class="form-group mt-4">
                     <label class="text-gray-700" asp-for="RegisterRequest.CreateUser.Password"></label>
                     <input asp-for="RegisterRequest.CreateUser.Password" class="bg-gray-200 text-gray-700 focus:outline-none focus:shadow-outline border border-gray-300 rounded py-2 px-4 block w-full appearance-none" type="password" />
-                    <span asp-validation-for="RegisterRequest.CreateUser.Password" class="text-danger"></span>
+                    <span asp-validation-for="RegisterRequest.CreateUser.Password" class="text-red-500"></span>
                 </div>
 
                 <!-- Company Information -->
@@ -53,17 +53,17 @@
                 <div class="form-group mt-4">
                     <label class="text-gray-700" asp-for="RegisterRequest.CreateCompany.CompanyName"></label>
                     <input asp-for="RegisterRequest.CreateCompany.CompanyName" class="bg-gray-200 text-gray-700 focus:outline-none focus:shadow-outline border border-gray-300 rounded py-2 px-4 block w-full appearance-none" />
-                    <span asp-validation-for="RegisterRequest.CreateCompany.CompanyName" class="text-danger"></span>
+                    <span asp-validation-for="RegisterRequest.CreateCompany.CompanyName" class="text-red-500"></span>
                 </div>
                 <div class="form-group mt-4">
                     <label class="text-gray-700" asp-for="RegisterRequest.CreateCompany.CompanyAddress"></label>
                     <input asp-for="RegisterRequest.CreateCompany.CompanyAddress" class="bg-gray-200 text-gray-700 focus:outline-none focus:shadow-outline border border-gray-300 rounded py-2 px-4 block w-full appearance-none" />
-                    <span asp-validation-for="RegisterRequest.CreateCompany.CompanyAddress" class="text-danger"></span>
+                    <span asp-validation-for="RegisterRequest.CreateCompany.CompanyAddress" class="text-red-500"></span>
                 </div>
                 <div class="form-group mt-4">
                     <label class="text-gray-700" asp-for="RegisterRequest.CreateCompany.CompanyDescription"></label>
                     <textarea asp-for="RegisterRequest.CreateCompany.CompanyDescription" class="bg-gray-200 text-gray-700 focus:outline-none focus:shadow-outline border border-gray-300 rounded py-2 px-4 block w-full appearance-none"></textarea>
-                    <span asp-validation-for="RegisterRequest.CreateCompany.CompanyDescription" class="text-danger"></span>
+                    <span asp-validation-for="RegisterRequest.CreateCompany.CompanyDescription" class="text-red-500"></span>
                 </div>
 
                 <div class="mt-8">
