--- a/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/OrderPages/Create.cshtml
+++ b/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/OrderPages/Create.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model PRN231_2_EventFlowerExchange_FE.Pages.OrderPage.CreateModel
+@model PRN231_2_EventFlowerExchange_FE.Pages.OrderPages.CreateModel
 
 @{
     ViewData["Title"] = "Create";
