--- a/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/OrderPages/Edit.cshtml
+++ b/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/OrderPages/Edit.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model PRN231_2_EventFlowerExchange_FE.Pages.OrderPage.EditModel
+@model PRN231_2_EventFlowerExchange_FE.Pages.OrderPages.EditModel
 
 @{
     ViewData["Title"] = "Edit";
