--- a/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/OrderPages/Delete.cshtml
+++ b/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/OrderPages/Delete.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model PRN231_2_EventFlowerExchange_FE.Pages.OrderPage.DeleteModel
+@model PRN231_2_EventFlowerExchange_FE.Pages.OrderPages.DeleteModel
 
 @{
     ViewData["Title"] = "Delete";
