Base CRUD for Company FE

--- a/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/Shared/_Header.cshtml
+++ b/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/Shared/_Header.cshtml
@@ -12,6 +12,7 @@
                 <a href="#about" class="text-gray-800 hover:text-indigo-600">About</a>
                 <a href="#plant" class="text-gray-800 hover:text-indigo-600">Flowers</a>
                 <a href="/BatchIndex" class="text-gray-800 hover:text-indigo-600">Batch</a>
+                <a href="/Company" class="text-gray-800 hover:text-indigo-600">Company</a>
                 <a href="#contact" class="text-gray-800 hover:text-indigo-600">Contact Us</a>
             </div>
             <div class="hidden md:flex items-center space-x-4">
